--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <script>
         function sendWhatsApp(productName, imageUrl) {
-            const phoneNumber = 'YOUR_PHONE';
+            const phoneNumber = '972525991584';
             const message = `אני מעוניין לקנות את ${productName}%0A${imageUrl}`;
             window.open(`https://api.whatsapp.com/send?phone=${phoneNumber}&text=${message}`, '_blank');
         }
