--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="candle1.jpg" alt="נר מעוצב 1">
             <h2>נר מעוצב 1</h2>
             <p>מחיר: 50 ש"ח</p>
-            <button class="buy-button" onclick="sendWhatsApp('נר מעוצב 1', 'candle1.jpg')">קנה מוצר</button>
+            <button class="buy-button" onclick="sendWhatsApp('נר מעוצב 1', 'candle.png')">קנה מוצר</button>
         </div>
         
         <div class="product">
