--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>ברוכים הבאים לחנות הנרות שלנו</h1>
         
         <div class="product">
-            <img src="candle1.jpg" alt="נר מעוצב 1">
+            <img src="candle.png" alt="נר מעוצב 1">
             <h2>נר מעוצב 1</h2>
             <p>מחיר: 50 ש"ח</p>
             <button class="buy-button" onclick="sendWhatsApp('נר מעוצב 1', 'candle.png')">קנה מוצר</button>
