--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
         body { font-family: Arial, sans-serif; text-align: center; background: linear-gradient(45deg, #ff9a9e, #fad0c4); margin: 0; padding: 0; }
         .container { max-width: 1000px; margin: auto; padding: 20px; }
         .category { margin-top: 40px; }
-        .category h2 { background: #ff758c; color: white; padding: 10px; border-radius: 5px; }
+        .category h2 { background: #ff758c; color: white; padding: 10px; border-radius: 5px; font-size: 1.5em; }
         .products { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; justify-content: center; }
         @media (max-width: 600px) {
             .products { grid-template-columns: repeat(2, 1fr); }
+            .category h2 { font-size: 1.2em; }
         }
-        .product { border: 2px solid #fff; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); text-align: center; }
-        .product img { width: 100%; max-width: 250px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
+        .product { border: 2px solid #fff; padding: 15px; background: white; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); text-align: center; }
+        .product img { width: 100%; max-width: 200px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
         .product img:hover { transform: scale(1.05); }
-        .buy-button { display: inline-block; padding: 12px 20px; margin-top: 15px; background-color: #25d366; color: white; text-decoration: none; border-radius: 5px; font-size: 16px; }
+        .buy-button { display: inline-block; padding: 10px 15px; margin-top: 10px; background-color: #25d366; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; }
         .buy-button:hover { background-color: #1da851; }
         .modal { display: none; position: fixed; z-index: 10; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); }
-        .modal-content { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; }
-        .modal img { width: 100%; max-width: 90vw; max-height: 90vh; border-radius: 10px; }
+        .modal-content { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; max-width: 90vw; max-height: 90vh; }
+        .modal img { width: 100%; max-width: 100%; max-height: 80vh; border-radius: 10px; }
         .close { position: absolute; top: 10px; right: 20px; font-size: 30px; cursor: pointer; }
     </style>
     <script>
@@ -41,21 +42,21 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="color: white;">ברוכים הבאים לחנות הנרות שלנו</h1>
+        <h1 style="color: white; font-size: 1.8em;">ברוכים הבאים לחנות הנרות שלנו</h1>
         
         <div class="category">
             <h2>קטגוריה 1</h2>
             <div class="products">
                 <div class="product">
                     <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 1" onclick="openModal('https://pc-f1x.github.io/Candle/candle.png')">
-                    <h2>נר מעוצב 1</h2>
-                    <p>מחיר: 50 ש"ח</p>
+                    <h2 style="font-size: 1.2em;">נר מעוצב 1</h2>
+                    <p style="font-size: 1em;">מחיר: 50 ש"ח</p>
                     <button class="buy-button" onclick="sendWhatsApp('נר מעוצב 1', 'https://pc-f1x.github.io/Candle/candle.png')">קנה מוצר</button>
                 </div>
                 <div class="product">
                     <img src="https://yourwebsite.com/images/candle2.jpg" alt="נר מעוצב 2" onclick="openModal('https://yourwebsite.com/images/candle2.jpg')">
-                    <h2>נר מעוצב 2</h2>
-                    <p>מחיר: 60 ש"ח</p>
+                    <h2 style="font-size: 1.2em;">נר מעוצב 2</h2>
+                    <p style="font-size: 1em;">מחיר: 60 ש"ח</p>
                     <button class="buy-button" onclick="sendWhatsApp('נר מעוצב 2', 'https://yourwebsite.com/images/candle2.jpg')">קנה מוצר</button>
                 </div>
                 <!-- הוסף כאן עוד 4 מוצרים לקטגוריה -->
