--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: linear-gradient(45deg, #ff9a9e, #fad0c4); margin: 0; padding: 0; }
         .container { max-width: 1000px; margin: auto; padding: 20px; }
+        .header { text-align: center; padding: 20px; }
+        .logo { max-width: 150px; }
         .category { margin-top: 40px; }
         .category h2 { background: #ff758c; color: white; padding: 10px; border-radius: 5px; font-size: 1.5em; }
         .products { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; justify-content: center; }
@@ -17,19 +19,34 @@
         .product { border: 2px solid #fff; padding: 15px; background: white; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); text-align: center; }
         .product img { width: 100%; max-width: 200px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
         .product img:hover { transform: scale(1.05); }
-        .buy-button { display: inline-block; padding: 10px 15px; margin-top: 10px; background-color: #25d366; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; }
-        .buy-button:hover { background-color: #1da851; }
-        .modal { display: none; position: fixed; z-index: 10; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7); }
-        .modal-content { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 10px; max-width: 90vw; max-height: 90vh; }
-        .modal img { width: 100%; max-width: 100%; max-height: 80vh; border-radius: 10px; }
-        .close { position: absolute; top: 10px; right: 20px; font-size: 30px; cursor: pointer; }
+        .cart-button { background-color: #007bff; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer; margin-top: 10px; }
+        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 200px; }
+        .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
+        .footer { text-align: center; padding: 20px; background: #333; color: white; margin-top: 40px; }
+        .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer; margin-top: 20px; display: block; }
     </style>
     <script>
-        function sendWhatsApp(productName, imageUrl) {
-            const phoneNumber = '972525991584';
-            const encodedMessage = encodeURIComponent(`אני מעוניין לקנות את ${productName}`);
-            const encodedImageUrl = encodeURIComponent(imageUrl);
-            window.open(`https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodedMessage}%0A${encodedImageUrl}`, '_blank');
+        let cart = [];
+        function addToCart(productName, imageUrl) {
+            cart.push({ name: productName, image: imageUrl });
+            updateCart();
+        }
+        function updateCart() {
+            const cartContainer = document.getElementById('cart-container');
+            cartContainer.innerHTML = '<h3>המוצרים שנבחרו</h3>';
+            cart.forEach(item => {
+                cartContainer.innerHTML += `<div class='cart-item'><img src='${item.image}'><span>${item.name}</span></div>`;
+            });
+            cartContainer.style.display = 'block';
+        }
+        function sendToWhatsApp() {
+            let phone = "972525991584"; // הכנס כאן את מספר הטלפון של המוכר
+            let message = "שלום, אני מעוניין לרכוש את המוצרים הבאים:%0A";
+            cart.forEach(item => {
+                message += `🔹 ${item.name} %0A`;
+            });
+            let whatsappUrl = `https://wa.me/${phone}?text=${message}`;
+            window.open(whatsappUrl, '_blank');
         }
         function openModal(imageSrc) {
             document.getElementById('modal-img').src = imageSrc;
@@ -41,6 +58,9 @@
     </script>
 </head>
 <body>
+    <div class="header">
+        <img src="https://yourwebsite.com/logo.png" alt="לוגו" class="logo">
+    </div>
     <div class="container">
         <h1 style="color: white; font-size: 1.8em;">ברוכים הבאים לחנות הנרות שלנו</h1>
         
@@ -51,31 +71,29 @@
                     <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 1" onclick="openModal('https://pc-f1x.github.io/Candle/candle.png')">
                     <h2 style="font-size: 1.2em;">נר מעוצב 1</h2>
                     <p style="font-size: 1em;">מחיר: 50 ש"ח</p>
-                    <button class="buy-button" onclick="sendWhatsApp('נר מעוצב 1', 'https://pc-f1x.github.io/Candle/candle.png')">קנה מוצר</button>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 1', 'https://pc-f1x.github.io/Candle/candle.png')">+</button>
                 </div>
                 <div class="product">
                     <img src="https://yourwebsite.com/images/candle2.jpg" alt="נר מעוצב 2" onclick="openModal('https://yourwebsite.com/images/candle2.jpg')">
                     <h2 style="font-size: 1.2em;">נר מעוצב 2</h2>
                     <p style="font-size: 1em;">מחיר: 60 ש"ח</p>
-                    <button class="buy-button" onclick="sendWhatsApp('נר מעוצב 2', 'https://yourwebsite.com/images/candle2.jpg')">קנה מוצר</button>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://yourwebsite.com/images/candle2.jpg')">+</button>
                 </div>
-                <!-- הוסף כאן עוד 4 מוצרים לקטגוריה -->
             </div>
         </div>
-        
-        <div class="category">
-            <h2>קטגוריה 2</h2>
-            <div class="products">
-                <!-- הוסף כאן 6 מוצרים נוספים -->
-            </div>
-        </div>
+        <button class="whatsapp-button" onclick="sendToWhatsApp()">שלח הזמנה לוואטסאפ</button>
     </div>
+    <div id="cart-container" class="cart-container"></div>
     <div id="imageModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <img id="modal-img" src="" alt="הגדלת תמונה">
         </div>
     </div>
+    <div class="footer">
+        <p>© 2025 חנות נרות מעוצבים | כל הזכויות שמורות</p>
+    </div>
 </body>
 </html>
+
 
