--- a/index.html
+++ b/index.html
@@ -24,18 +24,22 @@
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
         .footer { text-align: center; padding: 20px; background: #333; color: white; margin-top: 40px; }
         .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer; margin-top: 20px; display: block; }
+        .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
+        .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; }
+        .modal img { width: 100%; max-width: 500px; border-radius: 10px; }
+        .close { position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px; }
     </style>
     <script>
         let cart = [];
-        function addToCart(productName, imageUrl) {
-            cart.push({ name: productName, image: imageUrl });
+        function addToCart(productName, imageUrl, price) {
+            cart.push({ name: productName, image: imageUrl, price: price });
             updateCart();
         }
         function updateCart() {
             const cartContainer = document.getElementById('cart-container');
             cartContainer.innerHTML = '<h3>המוצרים שנבחרו</h3>';
             cart.forEach(item => {
-                cartContainer.innerHTML += `<div class='cart-item'><img src='${item.image}'><span>${item.name}</span></div>`;
+                cartContainer.innerHTML += `<div class='cart-item'><img src='${item.image}'><span>${item.name} - ${item.price} ש"ח</span></div>`;
             });
             cartContainer.style.display = 'block';
         }
@@ -43,14 +47,14 @@
             let phone = "972525991584"; // הכנס כאן את מספר הטלפון של המוכר
             let message = "שלום, אני מעוניין לרכוש את המוצרים הבאים:%0A";
             cart.forEach(item => {
-                message += `🔹 ${item.name} %0A`;
+                message += `🔹 ${item.name} - ${item.price} ש"ח%0A`;
             });
             let whatsappUrl = `https://wa.me/${phone}?text=${message}`;
             window.open(whatsappUrl, '_blank');
         }
         function openModal(imageSrc) {
             document.getElementById('modal-img').src = imageSrc;
-            document.getElementById('imageModal').style.display = 'block';
+            document.getElementById('imageModal').style.display = 'flex';
         }
         function closeModal() {
             document.getElementById('imageModal').style.display = 'none';
@@ -63,21 +67,20 @@
     </div>
     <div class="container">
         <h1 style="color: white; font-size: 1.8em;">ברוכים הבאים לחנות הנרות שלנו</h1>
-        
         <div class="category">
             <h2>קטגוריה 1</h2>
             <div class="products">
                 <div class="product">
-                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 1" onclick="openModal('https://pc-f1x.github.io/Candle/candle.png')">
-                    <h2 style="font-size: 1.2em;">נר מעוצב 1</h2>
-                    <p style="font-size: 1em;">מחיר: 50 ש"ח</p>
-                    <button class="cart-button" onclick="addToCart('נר מעוצב 1', 'https://pc-f1x.github.io/Candle/candle.png')">+</button>
+                    <img src="https://pc-f1x.github.io/Candle/candle.png" alt="נר מעוצב 1" onclick="openModal(this.src)">
+                    <h2>נר מעוצב 1</h2>
+                    <p>מחיר: 50 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 1', 'https://pc-f1x.github.io/Candle/candle.png', '50')">+</button>
                 </div>
                 <div class="product">
-                    <img src="https://yourwebsite.com/images/candle2.jpg" alt="נר מעוצב 2" onclick="openModal('https://yourwebsite.com/images/candle2.jpg')">
-                    <h2 style="font-size: 1.2em;">נר מעוצב 2</h2>
-                    <p style="font-size: 1em;">מחיר: 60 ש"ח</p>
-                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://yourwebsite.com/images/candle2.jpg')">+</button>
+                    <img src="https://yourwebsite.com/images/candle2.jpg" alt="נר מעוצב 2" onclick="openModal(this.src)">
+                    <h2>נר מעוצב 2</h2>
+                    <p>מחיר: 60 ש"ח</p>
+                    <button class="cart-button" onclick="addToCart('נר מעוצב 2', 'https://yourwebsite.com/images/candle2.jpg', '60')">+</button>
                 </div>
             </div>
         </div>
@@ -95,5 +98,3 @@
     </div>
 </body>
 </html>
-
-
