--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
         .product { border: 2px solid #fff; padding: 15px; background: white; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); text-align: center; }
         .product img { width: 100%; max-width: 200px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
         .product img:hover { transform: scale(1.05); }
-        .cart-button { background-color: #007bff; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer; margin-top: 10px; }
-        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 200px; }
+        .cart-button { background-color: #007bff; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 10px; font-size: 1.2em; }
+        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 250px; }
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
-        .footer { text-align: center; padding: 20px; background: #333; color: white; margin-top: 40px; }
-        .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer; margin-top: 20px; display: block; }
+        .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 20px; display: block; font-size: 1.2em; position: fixed; right: 10px; bottom: 20px; }
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
-        .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; }
-        .modal img { width: 100%; max-width: 500px; border-radius: 10px; }
+        .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; max-width: 90%; }
+        .modal img { width: 100%; max-width: 600px; border-radius: 10px; }
         .close { position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px; }
     </style>
     <script>
@@ -84,8 +83,8 @@
                 </div>
             </div>
         </div>
-        <button class="whatsapp-button" onclick="sendToWhatsApp()">שלח הזמנה לוואטסאפ</button>
     </div>
+    <button class="whatsapp-button" onclick="sendToWhatsApp()">שלח הזמנה לוואטסאפ</button>
     <div id="cart-container" class="cart-container"></div>
     <div id="imageModal" class="modal">
         <div class="modal-content">
@@ -98,3 +97,4 @@
     </div>
 </body>
 </html>
+
