--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .cart-button { background-color: #007bff; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 10px; font-size: 1.2em; }
         .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 250px; }
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
-        .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 20px; display: block; font-size: 1.2em; position: fixed; right: 10px; bottom: 20px; }
+        .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 20px; display: none; font-size: 1.2em; position: fixed; right: 10px; bottom: 20px; }
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
         .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; max-width: 90%; }
         .modal img { width: 100%; max-width: 600px; border-radius: 10px; }
@@ -41,6 +41,11 @@
                 cartContainer.innerHTML += `<div class='cart-item'><img src='${item.image}'><span>${item.name} - ${item.price} ש"ח</span></div>`;
             });
             cartContainer.style.display = 'block';
+
+            // הצגת כפתור הוואטסאפ רק אם יש מוצרים בסל
+            if (cart.length > 0) {
+                document.querySelector('.whatsapp-button').style.display = 'block';
+            }
         }
         function sendToWhatsApp() {
             let phone = "972525991584"; // הכנס כאן את מספר הטלפון של המוכר
@@ -56,6 +61,11 @@
             document.getElementById('imageModal').style.display = 'flex';
         }
         function closeModal() {
+            document.getElementById('imageModal').style.display = 'none';
+        }
+
+        // הסתרת חלון ההגדלה בהתחלה
+        window.onload = function() {
             document.getElementById('imageModal').style.display = 'none';
         }
     </script>
@@ -97,4 +107,5 @@
     </div>
 </body>
 </html>
+
 
