--- a/index.html
+++ b/index.html
@@ -20,20 +20,37 @@
         .product img { width: 100%; max-width: 200px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
         .product img:hover { transform: scale(1.05); }
         .cart-button { background-color: #007bff; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 10px; font-size: 1.2em; }
-        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 250px; }
+        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 250px; min-height: 150px; transition: all 0.3s ease; }
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
         .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 20px; display: none; font-size: 1.2em; position: fixed; right: 10px; bottom: 20px; }
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
         .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; max-width: 90%; }
         .modal img { width: 100%; max-width: 600px; border-radius: 10px; }
         .close { position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px; }
+
+        .resize-buttons {
+            margin-top: 10px;
+        }
+
+        .resize-button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 8px 12px;
+            font-size: 1em;
+            cursor: pointer;
+            border-radius: 5px;
+            margin: 0 5px;
+        }
     </style>
     <script>
         let cart = [];
+
         function addToCart(productName, imageUrl, price) {
             cart.push({ name: productName, image: imageUrl, price: price });
             updateCart();
         }
+
         function updateCart() {
             const cartContainer = document.getElementById('cart-container');
             cartContainer.innerHTML = '<h3>המוצרים שנבחרו</h3>';
@@ -42,11 +59,11 @@
             });
             cartContainer.style.display = 'block';
 
-            // הצגת כפתור הוואטסאפ רק אם יש מוצרים בסל
             if (cart.length > 0) {
                 document.querySelector('.whatsapp-button').style.display = 'block';
             }
         }
+
         function sendToWhatsApp() {
             let phone = "972525991584"; // הכנס כאן את מספר הטלפון של המוכר
             let message = "שלום, אני מעוניין לרכוש את המוצרים הבאים:%0A";
@@ -56,10 +73,12 @@
             let whatsappUrl = `https://wa.me/${phone}?text=${message}`;
             window.open(whatsappUrl, '_blank');
         }
+
         function openModal(imageSrc) {
             document.getElementById('modal-img').src = imageSrc;
             document.getElementById('imageModal').style.display = 'flex';
         }
+
         function closeModal() {
             document.getElementById('imageModal').style.display = 'none';
         }
@@ -67,6 +86,21 @@
         // הסתרת חלון ההגדלה בהתחלה
         window.onload = function() {
             document.getElementById('imageModal').style.display = 'none';
+        }
+
+        // פונקציות להקטנה והגדלה של הסל
+        function resizeCart(action) {
+            const cartContainer = document.getElementById('cart-container');
+            let currentWidth = cartContainer.offsetWidth;
+            let currentHeight = cartContainer.offsetHeight;
+
+            if (action === 'increase') {
+                cartContainer.style.width = (currentWidth * 1.2) + 'px';
+                cartContainer.style.height = (currentHeight * 1.2) + 'px';
+            } else if (action === 'decrease') {
+                cartContainer.style.width = (currentWidth * 0.8) + 'px';
+                cartContainer.style.height = (currentHeight * 0.8) + 'px';
+            }
         }
     </script>
 </head>
@@ -95,7 +129,14 @@
         </div>
     </div>
     <button class="whatsapp-button" onclick="sendToWhatsApp()">שלח הזמנה לוואטסאפ</button>
-    <div id="cart-container" class="cart-container"></div>
+    <div id="cart-container" class="cart-container" style="top: 50px; right: 10px;">
+        <div class="cart-container-header">סל קניות</div>
+        <div id="cart-container-items"></div>
+        <div class="resize-buttons">
+            <button class="resize-button" onclick="resizeCart('increase')">הגדל</button>
+            <button class="resize-button" onclick="resizeCart('decrease')">הקטן</button>
+        </div>
+    </div>
     <div id="imageModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
@@ -107,5 +148,3 @@
     </div>
 </body>
 </html>
-
-
