--- a/index.html
+++ b/index.html
@@ -20,18 +20,11 @@
         .product img { width: 100%; max-width: 200px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
         .product img:hover { transform: scale(1.05); }
         .cart-button { background-color: #007bff; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 10px; font-size: 1.2em; }
-        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 10px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 250px; min-height: 150px; transition: all 0.3s ease; }
+        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 300px; min-height: 150px; transition: all 0.3s ease; }
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
-        .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 20px; display: none; font-size: 1.2em; position: fixed; right: 10px; bottom: 20px; }
-        .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
-        .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; max-width: 90%; }
-        .modal img { width: 100%; max-width: 600px; border-radius: 10px; }
-        .close { position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px; }
-
         .resize-buttons {
             margin-top: 10px;
         }
-
         .resize-button {
             background-color: #007bff;
             color: white;
@@ -42,6 +35,20 @@
             border-radius: 5px;
             margin: 0 5px;
         }
+        .whatsapp-button {
+            background-color: #25D366;
+            color: white;
+            border: none;
+            padding: 12px;
+            border-radius: 8px;
+            cursor: pointer;
+            margin-top: 10px;
+            font-size: 1.2em;
+        }
+        .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
+        .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; max-width: 90%; }
+        .modal img { width: 100%; max-width: 600px; border-radius: 10px; }
+        .close { position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px; }
     </style>
     <script>
         let cart = [];
@@ -57,11 +64,8 @@
             cart.forEach(item => {
                 cartContainer.innerHTML += `<div class='cart-item'><img src='${item.image}'><span>${item.name} - ${item.price} ש"ח</span></div>`;
             });
+            cartContainer.innerHTML += `<button class="whatsapp-button" onclick="sendToWhatsApp()">שלח הזמנה לוואטסאפ</button>`;
             cartContainer.style.display = 'block';
-
-            if (cart.length > 0) {
-                document.querySelector('.whatsapp-button').style.display = 'block';
-            }
         }
 
         function sendToWhatsApp() {
@@ -83,7 +87,6 @@
             document.getElementById('imageModal').style.display = 'none';
         }
 
-        // הסתרת חלון ההגדלה בהתחלה
         window.onload = function() {
             document.getElementById('imageModal').style.display = 'none';
         }
@@ -128,10 +131,7 @@
             </div>
         </div>
     </div>
-    <button class="whatsapp-button" onclick="sendToWhatsApp()">שלח הזמנה לוואטסאפ</button>
-    <div id="cart-container" class="cart-container" style="top: 50px; right: 10px;">
-        <div class="cart-container-header">סל קניות</div>
-        <div id="cart-container-items"></div>
+    <div id="cart-container" class="cart-container">
         <div class="resize-buttons">
             <button class="resize-button" onclick="resizeCart('increase')">הגדל</button>
             <button class="resize-button" onclick="resizeCart('decrease')">הקטן</button>
