--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
         .resize-buttons {
             margin-top: 10px;
+            display: flex;
+            justify-content: space-between;
         }
         .resize-button {
             background-color: #007bff;
@@ -33,7 +35,6 @@
             font-size: 1em;
             cursor: pointer;
             border-radius: 5px;
-            margin: 0 5px;
         }
         .whatsapp-button {
             background-color: #25D366;
