--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         .category h2 { background: #ff758c; color: white; padding: 10px; border-radius: 5px; font-size: 1.5em; }
         .products { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; justify-content: center; }
         @media (max-width: 600px) {
-            .products { grid-template-columns: repeat(2, 1fr); }
+            .products { grid-template-columns: 1fr; }
             .category h2 { font-size: 1.2em; }
         }
         .product { border: 2px solid #fff; padding: 15px; background: white; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); text-align: center; }
         .product img { width: 100%; max-width: 200px; border-radius: 10px; cursor: pointer; transition: transform 0.3s; }
         .product img:hover { transform: scale(1.05); }
         .cart-button { background-color: #007bff; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 10px; font-size: 1.2em; }
-        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 300px; min-height: 150px; transition: all 0.3s ease; }
+        .cart-container { position: fixed; top: 50px; right: 10px; background: white; padding: 15px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); display: none; width: 280px; min-height: 200px; max-height: 70%; overflow-y: auto; transition: all 0.3s ease; z-index: 1000; }
         .cart-item img { width: 50px; height: 50px; border-radius: 5px; margin-right: 10px; }
         .resize-buttons {
-            margin-top: 10px;
             display: flex;
             justify-content: space-between;
+            margin-top: 10px;
         }
         .resize-button {
             background-color: #007bff;
@@ -45,6 +45,7 @@
             cursor: pointer;
             margin-top: 10px;
             font-size: 1.2em;
+            display: block;
         }
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
         .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; max-width: 90%; }
