--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .resize-buttons { display: flex; justify-content: space-between; margin-top: 10px; }
         .resize-button { background-color: #007bff; color: white; border: none; padding: 8px 12px; font-size: 1em; cursor: pointer; border-radius: 5px; }
         .whatsapp-button { background-color: #25D366; color: white; border: none; padding: 12px; border-radius: 8px; cursor: pointer; margin-top: 10px; font-size: 1.2em; display: block; }
-        .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
+        .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); align-items: center; justify-content: center; }
         .modal-content { position: relative; background: white; padding: 20px; border-radius: 10px; max-width: 90%; }
         .modal img { width: 100%; max-width: 600px; border-radius: 10px; }
         .close { position: absolute; top: 10px; right: 10px; cursor: pointer; font-size: 24px; }
