--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <img src="img/baby_feet.png" alt="כף רגל תינוק" onclick="openModal(this.src)">
                     <h2>כף רגל תינוק</h2>
                     <p>מחיר: 30 ש"ח</p>
-                    <button class="cart-button" onclick="addToCart('כף רגל תינוק ריחני', 'https://pc-f1x.github.io/Candle/candle.png', '30')">בחר</button>
+                    <button class="cart-button" onclick="addToCart('כף רגל תינוק ריחני', 'img/baby_feet.png', '30')">בחר</button>
                 </div>
                 <div class="product">
                     <img src="img/bubble.png" alt="כדורים" onclick="openModal(this.src)">
